# trains-api/src/main/java/com/gini/controller/TicketController.java
@@ -1,11 +1,13 @@
 package com.gini.controller;
 
 import com.gini.service.TicketService;
-import gin.model.TicketRequest;
-import gini.api.TicketApi;
+import gini.trainsapi.api.TicketApi;
+import gini.trainscore.model.TicketRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.web.bind.annotation.RestController;
 
 @Slf4j
@@ -16,9 +18,8 @@ public class TicketController implements TicketApi {
     private final TicketService ticketService;
 
     @Override
-    public ResponseEntity<Void> createTicket(TicketRequest ticketRequest) {
-        log.debug("ticket request received");
-        ticketService.createTicket(ticketRequest);
+    public ResponseEntity<Void> createTicket(String routeId) {
+        ticketService.createTicket(routeId);
         return ResponseEntity.ok().build();
     }
 }
