# trains-api/src/main/java/com/gini/service/RouteService.java
@@ -1,8 +1,9 @@
 package com.gini.service;
 
 import com.gini.gateway.TrainsCoreGateway;
-import gin.model.RouteRequest;
-import gin.model.RouteRequestUpdate;
+import com.gini.mapper.RouteMapper;
+import gini.trainsapi.model.RouteRequest;
+import gini.trainsapi.model.RouteRequestUpdate;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -11,13 +12,16 @@ import org.springframework.stereotype.Service;
 public class RouteService {
 
     private final TrainsCoreGateway trainsCoreGateway;
+    private final RouteMapper routeMapper;
 
-    public void createRoute(RouteRequest routeRequest){
-        trainsCoreGateway.createRoute(routeRequest);
+    public void createRoute(RouteRequest routeRequest) {
+        var request = routeMapper.mapFrom(routeRequest);
+        trainsCoreGateway.createRoute(request);
     }
 
-    public void updateRoute(RouteRequestUpdate routeRequestUpdate){
-        trainsCoreGateway.updateRoute(routeRequestUpdate);
+    public void updateRoute(RouteRequestUpdate routeRequestUpdate) {
+        var request = routeMapper.mapFrom(routeRequestUpdate);
+        trainsCoreGateway.updateRoute(request);
     }
 
 }
